src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket.qsystem.Measure.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque
%Result = type opaque

define private { i1, i1 } @_hl.main.1(%Qubit* %0) {
alloca_block:
  %"0" = alloca { i1, i1 }, align 8
  %"2_0" = alloca %Qubit*, align 8
  %"4_0" = alloca { i1, i1 }, align 8
  %"6_0" = alloca %Qubit*, align 8
  %"8_0" = alloca i1, align 1
  %"9_0" = alloca { i1, i1 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %Qubit* %0, %Qubit** %"2_0", align 8
  %"2_01" = load %Qubit*, %Qubit** %"2_0", align 8
  store %Qubit* %"2_01", %Qubit** %"6_0", align 8
  %"6_02" = load %Qubit*, %Qubit** %"6_0", align 8
  %1 = call %Result* @__QIR__CONV_Qubit_TO_Result(%Qubit* %"6_02")
  call void @__quantum__qis__mz__body(%Qubit* %"6_02", %Result* %1)
  %2 = call i1 @__quantum__rt__read_result(%Result* %1)
  %3 = select i1 %2, i1 true, i1 false
  store i1 %3, i1* %"8_0", align 1
  %"8_03" = load i1, i1* %"8_0", align 1
  %4 = insertvalue { i1, i1 } { i1 true, i1 poison }, i1 %"8_03", 1
  store { i1, i1 } %4, { i1, i1 }* %"9_0", align 1
  %"9_04" = load { i1, i1 }, { i1, i1 }* %"9_0", align 1
  store { i1, i1 } %"9_04", { i1, i1 }* %"4_0", align 1
  %"4_05" = load { i1, i1 }, { i1, i1 }* %"4_0", align 1
  store { i1, i1 } %"4_05", { i1, i1 }* %"0", align 1
  %"06" = load { i1, i1 }, { i1, i1 }* %"0", align 1
  ret { i1, i1 } %"06"
}

declare %Result* @__QIR__CONV_Qubit_TO_Result(%Qubit*)

declare void @__quantum__qis__mz__body(%Qubit*, %Result* writeonly) #0

declare i1 @__quantum__rt__read_result(%Result* readonly)

attributes #0 = { "irreversible" }
