src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm21_tket.qsystem.Measure.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i1, i1 } @_hl.main.1(ptr %0) {
alloca_block:
  %"0" = alloca { i1, i1 }, align 8
  %"2_0" = alloca ptr, align 8
  %"4_0" = alloca { i1, i1 }, align 8
  %"6_0" = alloca ptr, align 8
  %"8_0" = alloca i1, align 1
  %"9_0" = alloca { i1, i1 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  store ptr %"2_01", ptr %"6_0", align 8
  %"6_02" = load ptr, ptr %"6_0", align 8
  %1 = call ptr @__QIR__CONV_Qubit_TO_Result(ptr %"6_02")
  call void @__quantum__qis__mz__body(ptr %"6_02", ptr %1)
  %2 = call i1 @__quantum__rt__read_result(ptr %1)
  %3 = select i1 %2, i1 true, i1 false
  store i1 %3, ptr %"8_0", align 1
  %"8_03" = load i1, ptr %"8_0", align 1
  %4 = insertvalue { i1, i1 } { i1 true, i1 poison }, i1 %"8_03", 1
  store { i1, i1 } %4, ptr %"9_0", align 1
  %"9_04" = load { i1, i1 }, ptr %"9_0", align 1
  store { i1, i1 } %"9_04", ptr %"4_0", align 1
  %"4_05" = load { i1, i1 }, ptr %"4_0", align 1
  store { i1, i1 } %"4_05", ptr %"0", align 1
  %"06" = load { i1, i1 }, ptr %"0", align 1
  ret { i1, i1 } %"06"
}

declare ptr @__QIR__CONV_Qubit_TO_Result(ptr)

declare void @__quantum__qis__mz__body(ptr, ptr writeonly) #0

declare i1 @__quantum__rt__read_result(ptr readonly)

attributes #0 = { "irreversible" }
